syntax = "proto3";

package penumbra.core.transparent_proofs.v1alpha1;

import "penumbra/core/crypto/v1alpha1/crypto.proto";
import "penumbra/core/dex/v1alpha1/dex.proto";

// A Penumbra transparent SwapClaimProof.
message SwapClaimProof {
  // The swap being claimed
  dex.v1alpha1.SwapPlaintext swap_plaintext = 1;

  // Inclusion proof for the swap commitment
  crypto.v1alpha1.StateCommitmentProof swap_commitment_proof = 4;

  // The nullifier key used to derive the swap nullifier
  bytes nk = 6;

  /**
   * @exclude
   * Describes output amounts
  */
  crypto.v1alpha1.Amount lambda_1_i = 20;
  crypto.v1alpha1.Amount lambda_2_i = 21;
}
